// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders as an anchor tag 1`] = `
.c0 {
  display: inline-block;
  min-height: 1.5rem;
  font-family: inherit;
  font-weight: 500;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  border: 1px solid;
  border-color: transparent;
  border-radius: 6.25rem;
  -webkit-transition: background-color 0.2s;
  transition: background-color 0.2s;
  white-space: nowrap;
  color: #FFFFFF;
  background-color: #0CCF61;
  font-size: 0.875rem;
  line-height: 1.25rem;
  height: 2.5rem;
  padding: 0 1.25rem;
}

.c0:disabled,
.c0[disabled] {
  cursor: not-allowed;
  opacity: 0.35;
}

.c0.is-hover:not([disabled]),
.c0:hover:not([disabled]) {
  background-color: #18DC6D;
}

.c0.is-active,
.c0.has-focus,
.c0:active,
.c0:focus {
  background-color: #02C054;
  outline: none;
}

.c1 {
  display: grid;
  height: 100%;
  grid-auto-flow: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  gap: 0.5rem;
}

<a
  className="c0"
  href="#some-anchor"
  size="small"
>
  <div
    className="c1"
  >
    Primary Button (Anchor)
  </div>
</a>
`;

exports[`Button renders as disabled 1`] = `
.c0 {
  display: inline-block;
  min-height: 1.5rem;
  font-family: inherit;
  font-weight: 500;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  border: 1px solid;
  border-color: transparent;
  border-radius: 6.25rem;
  -webkit-transition: background-color 0.2s;
  transition: background-color 0.2s;
  white-space: nowrap;
  color: #FFFFFF;
  background-color: #0CCF61;
  font-size: 0.875rem;
  line-height: 1.25rem;
  height: 2.5rem;
  padding: 0 1.25rem;
}

.c0:disabled,
.c0[disabled] {
  cursor: not-allowed;
  opacity: 0.35;
}

.c0.is-hover:not([disabled]),
.c0:hover:not([disabled]) {
  background-color: #18DC6D;
}

.c0.is-active,
.c0.has-focus,
.c0:active,
.c0:focus {
  background-color: #02C054;
  outline: none;
}

.c1 {
  display: grid;
  height: 100%;
  grid-auto-flow: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  gap: 0.5rem;
}

<button
  className="c0"
  disabled={true}
  size="small"
>
  <div
    className="c1"
  >
    DisabledTW Primary Button
  </div>
</button>
`;

exports[`Button renders as fullWidth 1`] = `
.c0 {
  display: inline-block;
  width: 100%;
  min-height: 1.5rem;
  font-family: inherit;
  font-weight: 500;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  border: 1px solid;
  border-color: transparent;
  border-radius: 6.25rem;
  -webkit-transition: background-color 0.2s;
  transition: background-color 0.2s;
  white-space: nowrap;
  position: relative;
  color: #FFFFFF;
  background-color: #0CCF61;
  font-size: 0.875rem;
  line-height: 1.25rem;
  height: 2.5rem;
  padding: 0 1.25rem;
}

.c0:disabled,
.c0[disabled] {
  cursor: not-allowed;
  opacity: 0.35;
}

.c0.is-hover:not([disabled]),
.c0:hover:not([disabled]) {
  background-color: #18DC6D;
}

.c0.is-active,
.c0.has-focus,
.c0:active,
.c0:focus {
  background-color: #02C054;
  outline: none;
}

.c1 {
  display: grid;
  height: 100%;
  grid-auto-flow: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  gap: 0.5rem;
}

<button
  className="c0"
  size="small"
>
  <div
    className="c1"
  >
    Full Width Primary Button
  </div>
</button>
`;

exports[`Button renders correctly 1`] = `
.c0 {
  display: inline-block;
  min-height: 1.5rem;
  font-family: inherit;
  font-weight: 500;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  border: 1px solid;
  border-color: transparent;
  border-radius: 6.25rem;
  -webkit-transition: background-color 0.2s;
  transition: background-color 0.2s;
  white-space: nowrap;
  color: #FFFFFF;
  background-color: #0CCF61;
  font-size: 0.875rem;
  line-height: 1.25rem;
  height: 2.5rem;
  padding: 0 1.25rem;
}

.c0:disabled,
.c0[disabled] {
  cursor: not-allowed;
  opacity: 0.35;
}

.c0.is-hover:not([disabled]),
.c0:hover:not([disabled]) {
  background-color: #18DC6D;
}

.c0.is-active,
.c0.has-focus,
.c0:active,
.c0:focus {
  background-color: #02C054;
  outline: none;
}

.c1 {
  display: grid;
  height: 100%;
  grid-auto-flow: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  gap: 0.5rem;
}

<button
  className="c0"
  size="small"
>
  <div
    className="c1"
  >
    Primary Button
  </div>
</button>
`;

exports[`Button variants renders as default 1`] = `
.c0 {
  display: inline-block;
  min-height: 1.5rem;
  font-family: inherit;
  font-weight: 500;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  border: 1px solid;
  border-color: transparent;
  border-radius: 6.25rem;
  -webkit-transition: background-color 0.2s;
  transition: background-color 0.2s;
  white-space: nowrap;
  color: #FFFFFF;
  background: none;
  font-size: 0.875rem;
  line-height: 1.25rem;
  padding: 0;
}

.c0:disabled,
.c0[disabled] {
  cursor: not-allowed;
  opacity: 0.35;
}

.c0.is-hover:not([disabled]),
.c0:hover:not([disabled]) {
  color: #FFFFFF;
}

.c0.is-active,
.c0.has-focus,
.c0:active,
.c0:focus {
  color: #FFFFFF;
  outline: none;
}

.c1 {
  display: grid;
  height: 100%;
  grid-auto-flow: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  gap: 0.5rem;
}

<button
  className="c0"
  size="small"
>
  <div
    className="c1"
  >
    Default Button
  </div>
</button>
`;

exports[`Button variants renders as highlight 1`] = `
.c0 {
  display: inline-block;
  min-height: 1.5rem;
  font-family: inherit;
  font-weight: 500;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  border: 1px solid;
  border-color: transparent;
  border-radius: 6.25rem;
  -webkit-transition: background-color 0.2s;
  transition: background-color 0.2s;
  white-space: nowrap;
  color: #FFFFFF;
  background-color: #0F75BD;
  font-size: 0.875rem;
  line-height: 1.25rem;
  height: 2.5rem;
  padding: 0 1.25rem;
}

.c0:disabled,
.c0[disabled] {
  cursor: not-allowed;
  opacity: 0.35;
}

.c0.is-hover:not([disabled]),
.c0:hover:not([disabled]) {
  opacity: 0.9;
}

.c0.is-active,
.c0.has-focus,
.c0:active,
.c0:focus {
  opacity: 0.8;
  outline: none;
}

.c1 {
  display: grid;
  height: 100%;
  grid-auto-flow: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  gap: 0.5rem;
}

<button
  className="c0"
  size="small"
>
  <div
    className="c1"
  >
    Secondary Button
  </div>
</button>
`;

exports[`Button variants renders as primary 1`] = `
.c0 {
  display: inline-block;
  min-height: 1.5rem;
  font-family: inherit;
  font-weight: 500;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  border: 1px solid;
  border-color: transparent;
  border-radius: 6.25rem;
  -webkit-transition: background-color 0.2s;
  transition: background-color 0.2s;
  white-space: nowrap;
  color: #FFFFFF;
  background-color: #0CCF61;
  font-size: 0.875rem;
  line-height: 1.25rem;
  height: 2.5rem;
  padding: 0 1.25rem;
}

.c0:disabled,
.c0[disabled] {
  cursor: not-allowed;
  opacity: 0.35;
}

.c0.is-hover:not([disabled]),
.c0:hover:not([disabled]) {
  background-color: #18DC6D;
}

.c0.is-active,
.c0.has-focus,
.c0:active,
.c0:focus {
  background-color: #02C054;
  outline: none;
}

.c1 {
  display: grid;
  height: 100%;
  grid-auto-flow: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  gap: 0.5rem;
}

<button
  className="c0"
  size="small"
>
  <div
    className="c1"
  >
    Primary Button
  </div>
</button>
`;

exports[`Button variants renders as secondary 1`] = `
.c0 {
  display: inline-block;
  min-height: 1.5rem;
  font-family: inherit;
  font-weight: 500;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  border: 1px solid;
  border-color: transparent;
  border-radius: 6.25rem;
  -webkit-transition: background-color 0.2s;
  transition: background-color 0.2s;
  white-space: nowrap;
  color: #FFFFFF;
  background-color: #393E47;
  font-size: 0.875rem;
  line-height: 1.25rem;
  height: 2.5rem;
  padding: 0 1.25rem;
}

.c0:disabled,
.c0[disabled] {
  cursor: not-allowed;
  opacity: 0.35;
}

.c0.is-hover:not([disabled]),
.c0:hover:not([disabled]) {
  background-color: #454A54;
}

.c0.is-active,
.c0.has-focus,
.c0:active,
.c0:focus {
  background-color: #2D3139;
  outline: none;
}

.c1 {
  display: grid;
  height: 100%;
  grid-auto-flow: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  gap: 0.5rem;
}

<button
  className="c0"
  size="small"
>
  <div
    className="c1"
  >
    Secondary Button
  </div>
</button>
`;

exports[`Button variants variants MockStates Default renders as active 1`] = `
.c0 {
  display: inline-block;
  min-height: 1.5rem;
  font-family: inherit;
  font-weight: 500;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  border: 1px solid;
  border-color: transparent;
  border-radius: 6.25rem;
  -webkit-transition: background-color 0.2s;
  transition: background-color 0.2s;
  white-space: nowrap;
  color: #FFFFFF;
  background: none;
  font-size: 0.875rem;
  line-height: 1.25rem;
  padding: 0;
}

.c0:disabled,
.c0[disabled] {
  cursor: not-allowed;
  opacity: 0.35;
}

.c0.is-hover:not([disabled]),
.c0:hover:not([disabled]) {
  color: #FFFFFF;
}

.c0.is-active,
.c0.has-focus,
.c0:active,
.c0:focus {
  color: #FFFFFF;
  outline: none;
}

.c1 {
  display: grid;
  height: 100%;
  grid-auto-flow: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  gap: 0.5rem;
}

<button
  className="c0 is-active"
  size="small"
>
  <div
    className="c1"
  >
    Active Default Button
  </div>
</button>
`;

exports[`Button variants variants MockStates Default renders as active 2`] = `
.c0 {
  display: inline-block;
  min-height: 1.5rem;
  font-family: inherit;
  font-weight: 500;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  border: 1px solid;
  border-color: transparent;
  border-radius: 6.25rem;
  -webkit-transition: background-color 0.2s;
  transition: background-color 0.2s;
  white-space: nowrap;
  color: #FFFFFF;
  background: none;
  font-size: 0.875rem;
  line-height: 1.25rem;
  padding: 0;
}

.c0:disabled,
.c0[disabled] {
  cursor: not-allowed;
  opacity: 0.35;
}

.c0.is-hover:not([disabled]),
.c0:hover:not([disabled]) {
  color: #FFFFFF;
}

.c0.is-active,
.c0.has-focus,
.c0:active,
.c0:focus {
  color: #FFFFFF;
  outline: none;
}

.c1 {
  display: grid;
  height: 100%;
  grid-auto-flow: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  gap: 0.5rem;
}

<button
  className="c0 is-active"
  size="small"
>
  <div
    className="c1"
  >
    Active Default Button
  </div>
</button>
`;

exports[`Button variants variants MockStates Default renders with hover 1`] = `
.c0 {
  display: inline-block;
  min-height: 1.5rem;
  font-family: inherit;
  font-weight: 500;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  border: 1px solid;
  border-color: transparent;
  border-radius: 6.25rem;
  -webkit-transition: background-color 0.2s;
  transition: background-color 0.2s;
  white-space: nowrap;
  color: #FFFFFF;
  background: none;
  font-size: 0.875rem;
  line-height: 1.25rem;
  padding: 0;
}

.c0:disabled,
.c0[disabled] {
  cursor: not-allowed;
  opacity: 0.35;
}

.c0.is-hover:not([disabled]),
.c0:hover:not([disabled]) {
  color: #FFFFFF;
}

.c0.is-active,
.c0.has-focus,
.c0:active,
.c0:focus {
  color: #FFFFFF;
  outline: none;
}

.c1 {
  display: grid;
  height: 100%;
  grid-auto-flow: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  gap: 0.5rem;
}

<button
  className="c0 is-hover"
  size="small"
>
  <div
    className="c1"
  >
    Hover Default Button
  </div>
</button>
`;

exports[`Button variants variants MockStates Default renders with hover 2`] = `
.c0 {
  display: inline-block;
  min-height: 1.5rem;
  font-family: inherit;
  font-weight: 500;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  border: 1px solid;
  border-color: transparent;
  border-radius: 6.25rem;
  -webkit-transition: background-color 0.2s;
  transition: background-color 0.2s;
  white-space: nowrap;
  color: #FFFFFF;
  background: none;
  font-size: 0.875rem;
  line-height: 1.25rem;
  padding: 0;
}

.c0:disabled,
.c0[disabled] {
  cursor: not-allowed;
  opacity: 0.35;
}

.c0.is-hover:not([disabled]),
.c0:hover:not([disabled]) {
  color: #FFFFFF;
}

.c0.is-active,
.c0.has-focus,
.c0:active,
.c0:focus {
  color: #FFFFFF;
  outline: none;
}

.c1 {
  display: grid;
  height: 100%;
  grid-auto-flow: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  gap: 0.5rem;
}

<button
  className="c0 is-hover"
  size="small"
>
  <div
    className="c1"
  >
    Hover Default Button
  </div>
</button>
`;

exports[`Button variants variants MockStates Highlight outline renders as active 1`] = `
.c0 {
  display: inline-block;
  min-height: 1.5rem;
  font-family: inherit;
  font-weight: 500;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  border: 1px solid;
  border-color: transparent;
  border-radius: 6.25rem;
  -webkit-transition: background-color 0.2s;
  transition: background-color 0.2s;
  white-space: nowrap;
  color: #FFFFFF;
  background-color: #0F75BD;
  font-size: 0.875rem;
  line-height: 1.25rem;
  height: 2.5rem;
  padding: 0 1.25rem;
}

.c0:disabled,
.c0[disabled] {
  cursor: not-allowed;
  opacity: 0.35;
}

.c0.is-hover:not([disabled]),
.c0:hover:not([disabled]) {
  opacity: 0.9;
}

.c0.is-active,
.c0.has-focus,
.c0:active,
.c0:focus {
  opacity: 0.8;
  outline: none;
}

.c1 {
  display: grid;
  height: 100%;
  grid-auto-flow: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  gap: 0.5rem;
}

<button
  className="c0 is-active"
  size="small"
>
  <div
    className="c1"
  >
    Active Primary Button
  </div>
</button>
`;

exports[`Button variants variants MockStates Highlight renders as active 1`] = `
.c0 {
  display: inline-block;
  min-height: 1.5rem;
  font-family: inherit;
  font-weight: 500;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  border: 1px solid;
  border-color: transparent;
  border-radius: 6.25rem;
  -webkit-transition: background-color 0.2s;
  transition: background-color 0.2s;
  white-space: nowrap;
  color: #FFFFFF;
  background-color: #0F75BD;
  font-size: 0.875rem;
  line-height: 1.25rem;
  height: 2.5rem;
  padding: 0 1.25rem;
}

.c0:disabled,
.c0[disabled] {
  cursor: not-allowed;
  opacity: 0.35;
}

.c0.is-hover:not([disabled]),
.c0:hover:not([disabled]) {
  opacity: 0.9;
}

.c0.is-active,
.c0.has-focus,
.c0:active,
.c0:focus {
  opacity: 0.8;
  outline: none;
}

.c1 {
  display: grid;
  height: 100%;
  grid-auto-flow: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  gap: 0.5rem;
}

<button
  className="c0 is-active"
  size="small"
>
  <div
    className="c1"
  >
    Active Highlight Button
  </div>
</button>
`;

exports[`Button variants variants MockStates Highlight renders with hover 1`] = `
.c0 {
  display: inline-block;
  min-height: 1.5rem;
  font-family: inherit;
  font-weight: 500;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  border: 1px solid;
  border-color: transparent;
  border-radius: 6.25rem;
  -webkit-transition: background-color 0.2s;
  transition: background-color 0.2s;
  white-space: nowrap;
  color: #FFFFFF;
  background-color: #0F75BD;
  font-size: 0.875rem;
  line-height: 1.25rem;
  height: 2.5rem;
  padding: 0 1.25rem;
}

.c0:disabled,
.c0[disabled] {
  cursor: not-allowed;
  opacity: 0.35;
}

.c0.is-hover:not([disabled]),
.c0:hover:not([disabled]) {
  opacity: 0.9;
}

.c0.is-active,
.c0.has-focus,
.c0:active,
.c0:focus {
  opacity: 0.8;
  outline: none;
}

.c1 {
  display: grid;
  height: 100%;
  grid-auto-flow: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  gap: 0.5rem;
}

<button
  className="c0 is-hover"
  size="small"
>
  <div
    className="c1"
  >
    Hover Highlight Button
  </div>
</button>
`;

exports[`Button variants variants MockStates Primary renders as active 1`] = `
.c0 {
  display: inline-block;
  min-height: 1.5rem;
  font-family: inherit;
  font-weight: 500;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  border: 1px solid;
  border-color: transparent;
  border-radius: 6.25rem;
  -webkit-transition: background-color 0.2s;
  transition: background-color 0.2s;
  white-space: nowrap;
  color: #FFFFFF;
  background-color: #0CCF61;
  font-size: 0.875rem;
  line-height: 1.25rem;
  height: 2.5rem;
  padding: 0 1.25rem;
}

.c0:disabled,
.c0[disabled] {
  cursor: not-allowed;
  opacity: 0.35;
}

.c0.is-hover:not([disabled]),
.c0:hover:not([disabled]) {
  background-color: #18DC6D;
}

.c0.is-active,
.c0.has-focus,
.c0:active,
.c0:focus {
  background-color: #02C054;
  outline: none;
}

.c1 {
  display: grid;
  height: 100%;
  grid-auto-flow: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  gap: 0.5rem;
}

<button
  className="c0 is-active"
  size="small"
>
  <div
    className="c1"
  >
    Active Primary Button
  </div>
</button>
`;

exports[`Button variants variants MockStates Primary renders with hover 1`] = `
.c0 {
  display: inline-block;
  min-height: 1.5rem;
  font-family: inherit;
  font-weight: 500;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  border: 1px solid;
  border-color: transparent;
  border-radius: 6.25rem;
  -webkit-transition: background-color 0.2s;
  transition: background-color 0.2s;
  white-space: nowrap;
  color: #FFFFFF;
  background-color: #0CCF61;
  font-size: 0.875rem;
  line-height: 1.25rem;
  height: 2.5rem;
  padding: 0 1.25rem;
}

.c0:disabled,
.c0[disabled] {
  cursor: not-allowed;
  opacity: 0.35;
}

.c0.is-hover:not([disabled]),
.c0:hover:not([disabled]) {
  background-color: #18DC6D;
}

.c0.is-active,
.c0.has-focus,
.c0:active,
.c0:focus {
  background-color: #02C054;
  outline: none;
}

.c1 {
  display: grid;
  height: 100%;
  grid-auto-flow: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  gap: 0.5rem;
}

<button
  className="c0 is-hover"
  size="small"
>
  <div
    className="c1"
  >
    Hover Primary Button
  </div>
</button>
`;

exports[`Button variants variants MockStates Secondary renders as active 1`] = `
.c0 {
  display: inline-block;
  min-height: 1.5rem;
  font-family: inherit;
  font-weight: 500;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  border: 1px solid;
  border-color: transparent;
  border-radius: 6.25rem;
  -webkit-transition: background-color 0.2s;
  transition: background-color 0.2s;
  white-space: nowrap;
  color: #FFFFFF;
  background-color: #393E47;
  font-size: 0.875rem;
  line-height: 1.25rem;
  height: 2.5rem;
  padding: 0 1.25rem;
}

.c0:disabled,
.c0[disabled] {
  cursor: not-allowed;
  opacity: 0.35;
}

.c0.is-hover:not([disabled]),
.c0:hover:not([disabled]) {
  background-color: #454A54;
}

.c0.is-active,
.c0.has-focus,
.c0:active,
.c0:focus {
  background-color: #2D3139;
  outline: none;
}

.c1 {
  display: grid;
  height: 100%;
  grid-auto-flow: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  gap: 0.5rem;
}

<button
  className="c0 is-active"
  size="small"
>
  <div
    className="c1"
  >
    Active Secondary Button
  </div>
</button>
`;

exports[`Button variants variants MockStates Secondary renders as active 2`] = `
.c0 {
  display: inline-block;
  min-height: 1.5rem;
  font-family: inherit;
  font-weight: 500;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  border: 1px solid;
  border-color: transparent;
  border-radius: 6.25rem;
  -webkit-transition: background-color 0.2s;
  transition: background-color 0.2s;
  white-space: nowrap;
  color: #FFFFFF;
  background-color: #393E47;
  font-size: 0.875rem;
  line-height: 1.25rem;
  height: 2.5rem;
  padding: 0 1.25rem;
}

.c0:disabled,
.c0[disabled] {
  cursor: not-allowed;
  opacity: 0.35;
}

.c0.is-hover:not([disabled]),
.c0:hover:not([disabled]) {
  background-color: #454A54;
}

.c0.is-active,
.c0.has-focus,
.c0:active,
.c0:focus {
  background-color: #2D3139;
  outline: none;
}

.c1 {
  display: grid;
  height: 100%;
  grid-auto-flow: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  gap: 0.5rem;
}

<button
  className="c0 is-active"
  size="small"
>
  <div
    className="c1"
  >
    Active Primary Button
  </div>
</button>
`;

exports[`Button variants variants MockStates Secondary renders with hover 1`] = `
.c0 {
  display: inline-block;
  min-height: 1.5rem;
  font-family: inherit;
  font-weight: 500;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  border: 1px solid;
  border-color: transparent;
  border-radius: 6.25rem;
  -webkit-transition: background-color 0.2s;
  transition: background-color 0.2s;
  white-space: nowrap;
  color: #FFFFFF;
  background-color: #393E47;
  font-size: 0.875rem;
  line-height: 1.25rem;
  height: 2.5rem;
  padding: 0 1.25rem;
}

.c0:disabled,
.c0[disabled] {
  cursor: not-allowed;
  opacity: 0.35;
}

.c0.is-hover:not([disabled]),
.c0:hover:not([disabled]) {
  background-color: #454A54;
}

.c0.is-active,
.c0.has-focus,
.c0:active,
.c0:focus {
  background-color: #2D3139;
  outline: none;
}

.c1 {
  display: grid;
  height: 100%;
  grid-auto-flow: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  gap: 0.5rem;
}

<button
  className="c0 is-hover"
  size="small"
>
  <div
    className="c1"
  >
    Hover Secondary Button
  </div>
</button>
`;

exports[`Button variants variants MockStates Secondary renders with hover 2`] = `
.c0 {
  display: inline-block;
  min-height: 1.5rem;
  font-family: inherit;
  font-weight: 500;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  border: 1px solid;
  border-color: transparent;
  border-radius: 6.25rem;
  -webkit-transition: background-color 0.2s;
  transition: background-color 0.2s;
  white-space: nowrap;
  color: #FFFFFF;
  background-color: #393E47;
  font-size: 0.875rem;
  line-height: 1.25rem;
  height: 2.5rem;
  padding: 0 1.25rem;
}

.c0:disabled,
.c0[disabled] {
  cursor: not-allowed;
  opacity: 0.35;
}

.c0.is-hover:not([disabled]),
.c0:hover:not([disabled]) {
  background-color: #454A54;
}

.c0.is-active,
.c0.has-focus,
.c0:active,
.c0:focus {
  background-color: #2D3139;
  outline: none;
}

.c1 {
  display: grid;
  height: 100%;
  grid-auto-flow: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  gap: 0.5rem;
}

<button
  className="c0 is-hover"
  size="small"
>
  <div
    className="c1"
  >
    Hover Primary Button
  </div>
</button>
`;
